--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ src="https://www.facebook.com/tr?id=1065006221096432&ev=PageView&noscript=1"
             </center>
 
             <!-- VSL -->
-                   https://b-vz-00dba1b8-e0a.tv.pandavideo.com.br/8c072dc2-e9c9-4589-b204-2244b3e1cd04/playlist.m3u8
+                   <iframe id="panda-8c072dc2-e9c9-4589-b204-2244b3e1cd04" src="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=8c072dc2-e9c9-4589-b204-2244b3e1cd04" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360"></iframe>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/qOcl0So" class="a-btn" style="text-decoration: none;">
