--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             </center>
 
             <!-- VSL -->
-<iframe id="panda-8c072dc2-e9c9-4589-b204-2244b3e1cd04" src="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=8c072dc2-e9c9-4589-b204-2244b3e1cd04" style="border:none;top:0;left:0" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="360" height="180"></iframe>            <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/qOcl0So" class="a-btn" style="text-decoration: none;">
+<iframe id="panda-8c072dc2-e9c9-4589-b204-2244b3e1cd04" src="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=8c072dc2-e9c9-4589-b204-2244b3e1cd04" style="border:none;top:0;left:0" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="420" height="280"></iframe>              <a href="https://pay.kiwify.com.br/qOcl0So" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
