--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+   
+    <link rel="preload" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/css/styles.css" as="style">
+<link rel="preload" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/js/main.bundle.js" as="script">
+<link rel="prerender" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=8c072dc2-e9c9-4589-b204-2244b3e1cd04">
+<link rel="preload" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/js/hls.js" as="script">
+<link rel="preload" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/js/plyr.polyfilled.min.js" as="script">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-00dba1b8-e0a/8c072dc2-e9c9-4589-b204-2244b3e1cd04.json" as="fetch">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-00dba1b8-e0a/config.json" as="fetch">
+<link rel="preload" href="https://b-vz-00dba1b8-e0a.tv.pandavideo.com.br/8c072dc2-e9c9-4589-b204-2244b3e1cd04/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://b-vz-00dba1b8-e0a.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://vz-00dba1b8-e0a.b-cdn.net">
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
