--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ src="https://www.facebook.com/tr?id=1065006221096432&ev=PageView&noscript=1"
             </center>
 
             <!-- VSL -->
-<div style="position:relative;padding-top:56.25%;"><iframe id="panda-2b80e8ca-f187-48df-9c7a-266095dfc737" src="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=2b80e8ca-f187-48df-9c7a-266095dfc737" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>            <!-- Botão 1 -->
+       <div style="position:relative;padding-top:56.25%;"><iframe id="panda-2b80e8ca-f187-48df-9c7a-266095dfc737" src="https://player-vz-00dba1b8-e0a.tv.pandavideo.com.br/embed/?v=2b80e8ca-f187-48df-9c7a-266095dfc737" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
+            <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/Mk2LXe7" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
